[tool.poetry]
name = "enduraw-src"
version = "0.1.0"
description = ""
authors = ["qdouzery <qdouzery@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.20.0"
numpy = "^2.2.2"
plotly = "^5.24.1"
selenium = "^4.27.1"
scikit-learn = "^1.6.1"
lightgbm = "^4.5.0"


[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = ["E402", "F821"]
